--- a/src/Pages/Login/index.css
+++ b/src/Pages/Login/index.css
@@ -1,9 +1,9 @@
-body {
-    background-image: url("https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg");
-    background-repeat: no-repeat;
-    background-position: center 110px;
-    background-size: 100%;
-}
+/*body {*/
+    /*background-image: url("https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg");*/
+    /*background-repeat: no-repeat;*/
+    /*background-position: center 110px;*/
+    /*background-size: 100%;*/
+/*}*/
 
 .form {
     position: absolute;
